fix article page header alignment

--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/_variables.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/_variables.sass
@@ -24,6 +24,7 @@ $fontsize: 16px // Body Font Size
 $textcolor: $white // Text Color
 $lineheight: 1.4 // Document Line Height
 $userfont: futura-pt, sans-serif // User Font Family
+$font-family-bold: 'futura-pt-bold', sans-serif
 $systemfont: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
 
 $breakpoints: (mobile: 0, mobile-large: 480, tablet: 768, desktop: 992, desktop-large: 1464)
