--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-text.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/blocks/_article-text.sass
@@ -29,6 +29,7 @@
         @include breakpoint(desktop, up)
             margin-bottom: 2em
 .big-quote
+    letter-spacing: 0.26px
     @include font-size(22px)
     line-height: 1.272em
     margin: 32px 0
@@ -37,7 +38,7 @@
     @include breakpoint(desktop, up)
         @include font-size(26px)
         line-height: 1.384em
-        margin: 40px 0
+        margin: 40px 0 47px
 
 .article-quote
     border-top: 1px solid $gold
