--- a/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/components/_typography.sass
+++ b/Main/Website/LionTrust.Web/Assets/New.FrontEnd/app/styles/sass/components/_typography.sass
@@ -11,7 +11,7 @@ h1, .h1
         line-height: 1.115em
     @include breakpoint(desktop-large, up)
         @include font-size(62px)
-        line-height: 1.064em
+        line-height: 1.065em
 
 h2, .h2
     font-size: 32px
